# MMA-GEMM

./: CMakeLists.txt  README.md  build.sh  generateMatrixForFP16.cpp  generateMatrixForFP8.cpp  generateMatrixForTF32.cpp  generate_matrices  run_sample.sh
src/: kernel.cuh  main.cu  utils.cuh
src/common/: common.h  logging.h  ptx.h
src/kernel/: mma_fp16.cu  mma_fp8_Ae5m2_Be4m3.cu  mma_fp8_e4m3.cu  mma_tf32.cu
